2010-08-09  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* scicos moved in toolboxes. remove old directories.

2010-04-11  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/gtksci/*: changes and addition in order to use 
	gtksourceview for text editor widget

2010-01-16  Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* macros/statistics: add some options to mean, var, and std
	(st_deviation and variance tagged as obsolete), add median
	function and a test file.

2009-07-17  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/liboptim: optim library added. 
	
2009-07-06  Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libinteg/int3dnsp.c: add int3d function (together with its
	help and a test file)  

2009-05-17  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/libportaudio added. 
	
2008-11-18  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/libminpack added 
	
2008-09-04  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatOps.c (nsp_mat_complex): add complex
	function

2008-09-01  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatOps.c (nsp_mat_angle): add
	angle function

2008-08-28  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* xexport can use cairo for exporting graphics even 
	for non cairo graphic windows. pdf svg ps can be used 
	png depends on the cairo/gtk version available. The 
	exact list of available format should be added. 
	
2008-08-21  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* diagset functions moved to set_diag method for 
	matint objects. 
	
2008-07-28  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* eye,ones,zeros: semantic has changed to follow Matlab rules.
	eye_new, ones_new, zeros_new are the same. eye_deprecated, 
	ones_deprecated, zeros_deprecated follow old rules.
	

2008-07-18  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* GetActions added and improvement in GList GSlist management 
	in gtk2/codegen. 
	
2008-05-02  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>
